fix(ci): resolve all CI workflow failures across language bindings
This commit fixes multiple CI failures discovered after the v4.2.0 release:

**Elixir CI (all platforms)**
- Remove unused imports (Native, Helpers, Error) in legacy_api.ex
- Prefix unused parameter with underscore (_opts)
- Fixes warnings-as-errors build failures

**C# CI (compilation errors)**
- Replace invalid 'with' expressions on classes with proper object initialization
- Fix method call: ExtractAsync() → ExtractBytesAsync()
- Resolves 4 compilation errors in DeprecationExamples.cs

**Go CI (Windows DLL not found)**
- Add dest-dir: 'target/release' to ONNX Runtime setup steps
- Fixes STATUS_DLL_NOT_FOUND (0xc0000135) error
- Ensures runtime dependencies are in correct PATH location

**Java CI (Windows JNI build failure)**
- Run Maven from workspace root using -f packages/java/pom.xml
- Fixes library path resolution for FFI dependencies
- Updates build, build:ci, and build:release tasks

**Python CI (e2e dependency resolution)**
- Add e2e/python to uv workspace members
- Configure workspace dependency with tool.uv.sources
- Fixes PyPI dependency resolution for unreleased v4.2.0

**Documentation workflow**
- Add fetch-depth: 0 to checkout action
- Eliminates 20+ git revision date warnings

**TypeScript build warnings**
- Suppress intentional direct-eval warning in tsup.config.ts
- eval() used for CJS/ESM compatibility, not a security issue

**Package lockfiles**
- Regenerate pnpm-lock.yaml to sync with package.json manifests
- Regenerate uv.lock with updated workspace configuration

All language binding tests should now pass on all platforms.

--- a/.github/workflows/ci-go.yaml
+++ b/.github/workflows/ci-go.yaml
@@ -153,6 +153,7 @@ jobs:
         uses: ./.github/actions/setup-onnx-runtime
         with:
           ort-version: ${{ env.ORT_VERSION }}
+          dest-dir: 'target/release'
 
       - name: Setup MSYS2 MinGW toolchain (Windows only)
         if: matrix.os == 'windows-latest'
@@ -422,6 +423,7 @@ jobs:
         uses: ./.github/actions/setup-onnx-runtime
         with:
           ort-version: ${{ env.ORT_VERSION }}
+          dest-dir: 'target/release'
 
       - name: Download FFI library
         uses: actions/download-artifact@v4
