--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ cache-keys = [
 ]
 
 [tool.uv.workspace]
-members = ["packages/python", "examples/python"]
+members = ["packages/python", "examples/python", "e2e/python"]
 
 [tool.ruff]
 target-version = "py310"
